Add two --simd examples; correct the SIMD guide; file todo-106
Two runnable examples where `--simd` actually pays off (the existing
nn-vec.lisp has rows of length 2 and 4, far below THRESHOLD = 128, so
`--simd` did nothing anywhere in examples/):

- ml/simd-dot.lisp -- the minimal one. One vec:dot over 1024 doubles,
  four thousand times. The vector holds 0.0..1023.0, so the answer is
  the exact integer 357389824 and every partial sum is exactly
  representable, which means lane-order folding cannot move it. The
  example therefore demonstrates its own contract: acceleration never
  changes an answer. Interpreter 2.59 s -> 2.3 ms, wasm-GC 273 -> 2.4 ms.

- ml/simd-gemv.lisp -- vec:matvec (GEMV) and vec:dot, the two kernels an
  autoregressive LLM spends nearly all its time in. A hundred steps of
  "project through a matrix, rescale to unit RMS". Prints argmax indices
  rather than floats, so the fingerprint survives the last-ULP
  differences lane-order summation introduces. Verified identical on all
  ten configurations (interpreter / JVM x 2 JITs / wasm-GC / wasm
  component, each with and without --simd). wasm-GC 467 -> 3.9 ms,
  interpreter 4.67 -> 0.68 s.

Both registered in examples.yaml (ExamplesE2eTest 89/0, elapsed line
deliberately unchecked) and examples/README.md, which also gains the
nn-vec.lisp row it was missing.

doc/{en,ja}/guides/simd-acceleration.md:

- The JVM bullet claimed "a bridge that the JIT intrinsifies". That is
  not something we can promise: the Vector API is a library a JVM may or
  may not compile to vector instructions, operation by operation, and
  where it does not it emulates each lane -- slower than the scalar loop
  --simd replaced. The guide now says so and tells the reader to measure,
  without asserting anything about a particular vendor's compiler.

- Documented the one shape that is ours rather than the JVM's: an #f
  reduction widens every f32 lane to f64 before accumulating (to match
  the scalar reference), which is the